# project4

./: .gitignore  CMakeLists.txt  README.md  build  hp_names_1.txt  names100.txt  names1000.txt
app/: HotPotato.cpp  HotPotato.hpp  QueueOfStrings.cpp  QueueOfStrings.hpp
tests/: queuetests.cpp
